[gd_scene load_steps=10 format=2]

[ext_resource path="res://menus/BaseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/PixelOperatorMono8.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://menus/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://menus/BaseButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://rooms/Background.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/Pool.tscn" type="PackedScene" id=7]
[ext_resource path="res://menus/base_button_hover-dark.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="MainMenu" instance=ExtResource( 1 )]
theme = ExtResource( 4 )
script = ExtResource( 2 )
transition = 1
practiceScene = "res://rooms/Practice.tscn"

[node name="Background" parent="." index="0" instance=ExtResource( 6 )]
position = Vector2( 0, 19 )

[node name="Pool" parent="Background" index="5" instance=ExtResource( 7 )]
position = Vector2( 120, 172 )
z_index = -10

[node name="WashOutBackground" type="ColorRect" parent="." index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="." index="2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer" index="0"]
margin_left = 16.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 164.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer" index="0"]
margin_left = 36.0
margin_top = 10.0
margin_right = 252.0
margin_bottom = 138.0
custom_constants/separation = 12

[node name="TitleWrap" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer" index="0"]
margin_right = 216.0
margin_bottom = 28.0

[node name="TitleLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/TitleWrap" index="0"]
margin_right = 216.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Boss Diver"
align = 1

[node name="Subtitle" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/TitleWrap" index="1"]
margin_top = 20.0
margin_right = 216.0
margin_bottom = 28.0
text = "by Dual Wield Entertainment"
align = 1

[node name="ButtonsWrap" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer" index="1"]
margin_left = 58.0
margin_top = 40.0
margin_right = 158.0
margin_bottom = 128.0
size_flags_horizontal = 4
custom_constants/separation = 8

[node name="PlayButton" parent="MarginContainer/CenterContainer/VBoxContainer/ButtonsWrap" index="0" instance=ExtResource( 5 )]
margin_left = 0.0
margin_right = 100.0
margin_bottom = 24.0
custom_styles/hover = ExtResource( 8 )
text = "Dive"

[node name="PracticeButton" parent="MarginContainer/CenterContainer/VBoxContainer/ButtonsWrap" index="1" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 32.0
margin_right = 100.0
margin_bottom = 56.0
custom_styles/hover = ExtResource( 8 )
text = "Practice"

[node name="QuitButton" parent="MarginContainer/CenterContainer/VBoxContainer/ButtonsWrap" index="2" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 64.0
margin_right = 100.0
margin_bottom = 88.0
custom_styles/hover = ExtResource( 8 )
text = "Quit"

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ButtonsWrap/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ButtonsWrap/PracticeButton" to="." method="_on_PracticeButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ButtonsWrap/QuitButton" to="." method="_on_QuitButton_pressed"]
